--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,16 @@ I also want to be able to travel many parts of the world because I had never bee
 I am interested in traveling in areas such as South Korea, Japan, New Zealand, and many other places.
 Through this site I will be showing things that make me who I am.
 </body>
-<h4> K-pop and K-drama Feels </h4>
+<body>
+As a rising senior, I am well aware of the college process ahead of myself. I can already
+feel the pressure and stress of having to mentally preparing for the application such as
+the SATs, the college essays, the recommendation letters and other things. I have not fully
+decided what I want to persue in college yet but I am having some sense to what I want to do.
+
+Being a student from Baruch College Campus High School (BCCHS) is different from other schools.
+
+</body>
+<h4> K-pop and K-drama </h4>
 <body>
 I do not remember exactly how I got into K-Pop and K-dramas. However, I highly reccomend
 exploring the K-pop music viedos on YouTube because although they may seem strange
@@ -25,7 +34,7 @@ because people on the show that many risks to make the most enjoyment for their 
 <body>
 Through my love for K-pop and K-dramas, I learnt a lot about the culture of South Korea
 as well as their delicious food. My favorite food is defientely Korean because it is amazing!
-I really enjoy spicy food even though I 
+Korean food is well known to be spicy. For instance, there is the Fire Noodles Challenge.
 </body>
 
 <h4> Food Life </h4>
