portfolio placed in work_body branch

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,9 @@
 <html>
+
 <head>
   <title> Melinda </title>
 </head>
+
 <h4> About Me </h4>
 <body>
 My name is Melinda. I am a rising senior in Baruch College Campus High School.
@@ -11,15 +13,17 @@ I also want to be able to travel many parts of the world because I had never bee
 I am interested in traveling in areas such as South Korea, Japan, New Zealand, and many other places.
 Through this site I will be showing things that make me who I am.
 </body>
+
 <body>
 As a rising senior, I am well aware of the college process ahead of myself. I can already
 feel the pressure and stress of having to mentally preparing for the application such as
 the SATs, the college essays, the recommendation letters and other things. I have not fully
 decided what I want to persue in college yet but I am having some sense to what I want to do.
-
-Being a student from Baruch College Campus High School (BCCHS) is different from other schools.
-
+Being a student from Baruch College Campus High School (BCCHS) is different from other schools
+because the school
 </body>
+
+
 <h4> K-pop and K-drama </h4>
 <body>
 I do not remember exactly how I got into K-Pop and K-dramas. However, I highly reccomend
@@ -31,6 +35,7 @@ I think they are entertaining because of the storyline/plot that you would never
 in American shows. Also, Korean variety shows are entirly on another level than American shows
 because people on the show that many risks to make the most enjoyment for their audience.
 </body>
+
 <body>
 Through my love for K-pop and K-dramas, I learnt a lot about the culture of South Korea
 as well as their delicious food. My favorite food is defientely Korean because it is amazing!
