--- a/portfolio.html
+++ b/portfolio.html
@@ -7,22 +7,23 @@
 <h4> About Me </h4>
 <body>
 My name is Melinda. I am a rising senior in Baruch College Campus High School.
-My birthday is on November 22nd which makes me a Saggitarius.
+I am currently 16 years old.
 I really enjoy listening to K-pop and watching K-dramas because I really love Korean culture.
 I also want to be able to travel many parts of the world because I had never been on a plane before.
 I am interested in traveling in areas such as South Korea, Japan, New Zealand, and many other places.
-Through this site I will be showing things that make me who I am.
+Through this site I will be telling you more about myself!
 </body>
 
 <body>
 As a rising senior, I am well aware of the college process ahead of myself. I can already
 feel the pressure and stress of having to mentally preparing for the application such as
 the SATs, the college essays, the recommendation letters and other things. I have not fully
-decided what I want to persue in college yet but I am having some sense to what I want to do.
-Being a student from Baruch College Campus High School (BCCHS) is different from other schools
-because the school
+decided what I want to persue in college but I have some sense to what I want to do.
+Also, being a student from Baruch College Campus High School (BCCHS) is different from other schools
+because the school is generally small in comparison to other schools. There is many
+limitations to classes students can take because it is a small school so there would not be
+a lot of teachers. However, I try to take as many classes as I can to take hold of the opportunities.
 </body>
-
 
 <h4> K-pop and K-drama </h4>
 <body>
@@ -35,6 +36,17 @@ I think they are entertaining because of the storyline/plot that you would never
 in American shows. Also, Korean variety shows are entirly on another level than American shows
 because people on the show that many risks to make the most enjoyment for their audience.
 </body>
+
+<ul>
+Black Pink
+Seventeen
+IU
+BTS
+Red Velvet
+Mamamoo
+TWICE
+VIXX
+</ul>
 
 <body>
 Through my love for K-pop and K-dramas, I learnt a lot about the culture of South Korea
