changes for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,18 @@
 
 <head>
   <title> Melinda </title>
+  <style>
+  p {
+    color: blue;
+    font-size: 25px;
+    text-align: center;
+  }
+
+  body {
+    background-color: lightgreen;
+  }
+
+  </style>
 </head>
 
 <h4> About Me </h4>
@@ -38,14 +50,14 @@ because people on the show that many risks to make the most enjoyment for their 
 </body>
 
 <ul>
-Black Pink
-Seventeen
-IU
-BTS
-Red Velvet
-Mamamoo
-TWICE
-VIXX
+<li>Black Pink</li>
+<li>Seventeen</li>
+<li>IU</li>
+<li>BTS</li>
+<li>Red Velvet</li>
+<li>Mamamoo</li>
+<li>TWICE</li>
+<li>VIXX</li>
 </ul>
 
 <body>
@@ -55,5 +67,7 @@ Korean food is well known to be spicy. For instance, there is the Fire Noodles C
 </body>
 
 <h4> Food Life </h4>
-<img>
+
+
+<h4> Projects </h4>
 <html>
