+more info to food life

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,11 +63,19 @@ because people on the show that many risks to make the most enjoyment for their 
 <body>
 Through my love for K-pop and K-dramas, I learnt a lot about the culture of South Korea
 as well as their delicious food. My favorite food is defientely Korean because it is amazing!
-Korean food is well known to be spicy. For instance, there is the Fire Noodles Challenge.
+Korean food is well known to be spicy or just mild. For instance, there are many flavors of
+ramen noodles and in one case there is the Fire Noodles Challenge which
+is a "super" spicy ramen. There are different flavors now considering there is cheese flavor,
+chicken flavor, spicy X2 flavor and many more.
 </body>
 
 <h4> Food Life </h4>
+<body>
+I really enjoy exploring the types of foods in the city with my friends. We decided to make
+a food squad group because we enjoyed trying out new foods/desserts. An easy way to plan
+places to go is through the app Yelp. Another way is through Insider. 
 
+</body>
 
 <h4> Projects </h4>
 <html>
