pics and edits to info

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
   p {
     color: blue;
     font-size: 25px;
+
     text-align: center;
   }
 
@@ -16,17 +17,23 @@
   </style>
 </head>
 
-<h4> About Me </h4>
+
+<h1 align=center> About Me </h1>
 <body>
+
+<p>
+<img align = "right" src="b.png">
 My name is Melinda. I am a rising senior in Baruch College Campus High School.
 I am currently 16 years old.
 I really enjoy listening to K-pop and watching K-dramas because I really love Korean culture.
 I also want to be able to travel many parts of the world because I had never been on a plane before.
 I am interested in traveling in areas such as South Korea, Japan, New Zealand, and many other places.
 Through this site I will be telling you more about myself!
-</body>
+</p>
 
-<body>
+<br> <br> 
+
+<p>
 As a rising senior, I am well aware of the college process ahead of myself. I can already
 feel the pressure and stress of having to mentally preparing for the application such as
 the SATs, the college essays, the recommendation letters and other things. I have not fully
@@ -35,10 +42,12 @@ Also, being a student from Baruch College Campus High School (BCCHS) is differen
 because the school is generally small in comparison to other schools. There is many
 limitations to classes students can take because it is a small school so there would not be
 a lot of teachers. However, I try to take as many classes as I can to take hold of the opportunities.
-</body>
+</p>
 
-<h4> K-pop and K-drama </h4>
-<body>
+<h1 align=center> K-pop and K-drama </h1>
+<img align="center" src="swag.gif" width=400>
+<p>
+
 I do not remember exactly how I got into K-Pop and K-dramas. However, I highly reccomend
 exploring the K-pop music viedos on YouTube because although they may seem strange
 or weird they start to become addicting. Regardless, you will find music and get into
@@ -47,7 +56,9 @@ because there are different generes such as romance, comedy, mystery and others.
 I think they are entertaining because of the storyline/plot that you would never see
 in American shows. Also, Korean variety shows are entirly on another level than American shows
 because people on the show that many risks to make the most enjoyment for their audience.
-</body>
+
+</p>
+
 
 <ul>
 <li>Black Pink</li>
@@ -57,25 +68,40 @@ because people on the show that many risks to make the most enjoyment for their 
 <li>Red Velvet</li>
 <li>Mamamoo</li>
 <li>TWICE</li>
-<li>VIXX</li>
 </ul>
 
-<body>
-Through my love for K-pop and K-dramas, I learnt a lot about the culture of South Korea
-as well as their delicious food. My favorite food is defientely Korean because it is amazing!
-Korean food is well known to be spicy or just mild. For instance, there are many flavors of
-ramen noodles and in one case there is the Fire Noodles Challenge which
-is a "super" spicy ramen. There are different flavors now considering there is cheese flavor,
-chicken flavor, spicy X2 flavor and many more.
-</body>
+<br> <br> <br>
 
-<h4> Food Life </h4>
-<body>
+<img align="left" src="hairflip.gif" width=350>
+<img align="left" src="seventeen.gif" width=400>
+<img align="left" src="iu.gif" width=450>
+<img align="left" src="bts.gif" width=450>
+<img align="left" src="redvelvet.gif" width=400>
+<img align="left" src="radish.gif" width=400>
+<img align="left" src="tt.gif" width=400>
+
+<br> <br> <br> 
+
+<div>
+  <p align="center">
+  Through my love for K-pop and K-dramas, I learnt a lot about the culture of South Korea
+  as well as their delicious food. My favorite food is defientely Korean because it is amazing!
+  Korean food is well known to be spicy or just mild. For instance, there are many flavors of
+  ramen noodles and in one case there is the Fire Noodles Challenge which
+  is a "super" spicy ramen. There are different flavors now considering there is cheese flavor,
+  chicken flavor, spicy X2 flavor and many more.
+  </p>
+</div>
+
+<h1 align=center> Food Life </h1>
+<p>
 I really enjoy exploring the types of foods in the city with my friends. We decided to make
 a food squad group because we enjoyed trying out new foods/desserts. An easy way to plan
-places to go is through the app Yelp. Another way is through Insider. 
+places to go is through the app Yelp. Another way is through Insider.
+
+</p>
+
+<h1 align=center> Projects </h1>
 
 </body>
-
-<h4> Projects </h4>
 <html>
