--- a/portfolio_website/portfolio.html
+++ b/portfolio_website/portfolio.html
@@ -40,7 +40,7 @@ I am interested in traveling in areas such as South Korea, Japan, New Zealand, a
 Through this site I will be telling you more about myself!
 </p>
 
-<br> <br> 
+<br> 
 
 <p onmouseover="this.style.color='red'" onmouseout="this.style.color='blue'">
 As a rising senior, I am well aware of the college process ahead of myself. I can already
@@ -94,14 +94,14 @@ because people on the show that many risks to make the most enjoyment for their 
 <div>
 <img align="left" src="hairflip.gif" height=300 width=440>
 <img align="left" src="seventeen.gif" height=300 width=440>
-<img align="left" src="iu.gif" height= 300 width=440>
-<img align="left" src="tt.gif" height= 300 width=330>
-<img aln="left" src="bts.gif" height= 300 width=330>
-<img align="left" src="redvelvet.gif" height= 300 width=330>
-<img align="left" src="radish.gif" height= 300 width=330>
+<img align="left" src="iu.gif" height= 300 width=420>
+<img align="left" src="tt.gif" height= 300 width=440>
+<img aln="left" src="bts.gif" height= 300 width=420>
+<img align="left" src="redvelvet.gif" height= 300 width= 440>
+<img align="left" src="radish.gif" height= 300 width=440>
 </div>
 
-<br> <br> <br> 
+<br> <br> 
 
 
   <p align="center" onmouseover="this.style.color='red'" onmouseout="this.style.color='blue'">
@@ -113,11 +113,12 @@ because people on the show that many risks to make the most enjoyment for their 
   chicken flavor, spicy X2 flavor and many more.
   </p>
 
+<br> <br>
 
 <h1 align=center> Food Life </h1>
 
 <div>
-<img align="left" src="insider_food.jpg" height=300 width=330>
+<img align="right" src="insider_food.jpg" height=300 width=330>
 </div>
 
 <p onmouseover="this.style.color='red'" onmouseout="this.style.color='blue'">
@@ -132,15 +133,9 @@ and emphasized the beauty of their food. It opens your options to other stores y
 as well as different areas you have never explored.
 </p>
 
-<h1 align=center> Volunteer </h1>
+<br> <br>
 
-<h3 align=center> P.S. 2 Meyer London Elementary School </h3>
-
-
-<h1 align=center> Extracurricular Activities </h1>
-
-
-<h3 align=center> Girls Who Code (Adobe NYC) </h3>
+<h1 align=center> Girls Who Code (Adobe NYC) </h1>
 
 <p onmouseover="this.style.color='red'" onmouseout="this.style.color='blue'">
 Through Girls Who Code (GWCs), I learnt a lot of the fundamentals of coding and met new people from different
@@ -151,6 +146,17 @@ to other people's stories and their journey in the field they are in. Their stor
 enlightening. I defientely want to reconsider taking courses in computer science in college.
 
 </p>
+
+<h1 align=center> Volunteer </h1>
+<h3 align=center> P.S. 2 Meyer London Elementary School </h3>
+<h3 align=center> Library (Hamilton Fish Park) </h3>
+
+<h1 align=center> Extracurricular Activities/ Clubs </h1>
+<h3 align=center> Cookies for Kids' Cancer </h3>
+<h3 align=center> Sphero </h3>
+<h3 align=center> Lorax </h3>
+<h3 align=center> Girls Varsity Soccer </h3>
+
 </div>
 </body>
 <html>
