--- a/portfolio_website/portfolio.html
+++ b/portfolio_website/portfolio.html
@@ -13,11 +13,39 @@
   body {
     background-color: lightgreen;
   }
+
+  li a {
+    display: block;
+    padding: 8px 16px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+}
+
   
   </style>
 </head>
 
 <div>
+
+<img align="right" src="cat.gif" width=400 height=235>
+<img align="right" src="welcome.gif" width=700 height = 235>
+
+
+<ul>
+  <li><a href=#About>About Me</a></li>
+  <li><a href=#Korean>K-pop and K-drama</a></li>
+  <li><a href= #Food>Food Life</a></li>
+  <li><a href=#GWC>Girls Who Code</a></li>
+  <li><a href=#Volunteer>Volunteer</a></li>
+  <li><a href=#Clubs>Extracurricular Activities/ Clubs</a></li>
+  <li><a href=#Contact>Contact</a></li>
+</ul>
 
 <h1 align=center> About Me </h1>
 <body>
@@ -74,19 +102,19 @@ because people on the show that many risks to make the most enjoyment for their 
 
 </p>
 
+<p id="list">
+<div>
 
-<ul id = "list" style="display:none">
+<li style = "font-size: 20px">Black Pink <a href="Comeback.htm">As If its Your Last</a></li>
+<li style = "font-size: 20px">Seventeen <a href="Carat.htm">Don't Wanna Cry</a></li></li>
+<li style = "font-size: 20px">IU <a href="Palette.htm">Palette</a></li>
+<li style = "font-size: 20px">TWICE <a href="Signal.htm">Signal</a></li>
+<li style = "font-size: 20px">BTS <a href="Tear.htm">Blood Sweat and Tears</a></li>
+<li style = "font-size: 20px">Red Velvet <a href="Russian_Roulette.htm">Russian Roulette</a></li>
+<li style = "font-size: 20px">Mamamoo <a href="Best.htm">You're the Best</a></li>
 
-<li>Black Pink <a href="Comeback.htm">As If its Your Last</a></li>
-<li>Seventeen <a href="Carat.htm">Don't Wanna Cry</a></li></li>
-<li>IU <a href="Palette.htm">Palette</a></li>
-<li>TWICE <a href="Signal.htm">Signal</a></li>
-<li>BTS <a href="Tear.htm">Blood Sweat and Tears</a></li>
-<li>Red Velvet <a href="Russian_Roulette.htm">Russian Roulette</a></li>
-<li>Mamamoo <a href="Best.htm">You're the Best</a></li>
-
-</ul>
-
+</div>
+</p>
 <button type="button" onclick="document.getElementById('list').style.display='block'">Find out about some groups!</button>
 
 <br> <br> <br>
@@ -144,8 +172,17 @@ knowledge to HTML, CSS, JavaScript, Python, and may more. My outlook of computer
 weeks as I realize how complex coding is to how many things could be achieved through coding. I was also able to listen 
 to other people's stories and their journey in the field they are in. Their stories and advice was empowering and 
 enlightening. I defientely want to reconsider taking courses in computer science in college.
-
 </p>
+
+<div>
+<h3 style = "font-size: 20px" align=center>Week 1: Scratch </h3>
+<h3 style = "font-size: 20px" align=center>Week 2: Python </h3>
+<h3 style = "font-size: 20px" align=center>Week 3: Web Development </h3>
+<h3 style = "font-size: 20px" align=center>Week 4: Robotics </h3>
+<h3 style = "font-size: 20px" align=center>Week 5: Applications </h3>
+<h3 style = "font-size: 20px" align=center>Week 6 and 7: Final Projects</h3>
+</div>
+
 
 <h1 align=center> Volunteer </h1>
 <h3 align=center> P.S. 2 Meyer London Elementary School </h3>
@@ -158,5 +195,10 @@ enlightening. I defientely want to reconsider taking courses in computer science
 <h3 align=center> Girls Varsity Soccer </h3>
 
 </div>
+
+<h4> Contact </h4>
+<h5> Email: mei.melinda@bcchsnyc.net </h5>
+
+
 </body>
 <html>
